screen modal related changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="modal fade modal-center" id="myModal" role="dialog">
+        <div class="modal fade modal-center" id="simonModal" role="dialog">
           <div class="modal-dialog">
             <div class="modal-content modal-bg">
               <div class="modal-body">
